Fix various secret client config typos, update join-connections, local-clients, datasource-refresh, build-profles, and cdata-connection READMEs